--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "adil/shyplite",
+    "name": "md-adil/shyplite",
     "description": "SDK for Shyplite shipment service",
 	"version": "1.0.0-dev",
 	"keywords": ["shipment", "marketplace", "shyplite", "shyplite api"],
